# ink

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  ROADMAP.md
.claude/skills/ink-dev/: SKILL.md
.claude/skills/ink-release/: SKILL.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
.opencode/skills/ink-dev/: SKILL.md
.opencode/skills/ink-release/: SKILL.md
docs/: api.rst  architecture.rst  building.rst  conf.py  index.rst  usage.rst
docs/api/: canvas.rst  glyph_cache.rst  gpu_context.rst  image.rst  pixmap.rst  recording.rst  surface.rst  types.rst
docs/guide/: backends.rst  building.rst  compositing.rst  quickstart.rst
docs/plans/: 2025-02-13-gpu-api-refactor.md  2025-02-13-remove-backend-layer.md
examples/: example_basic.cpp  example_composite.cpp  example_gpu.cpp
include/ink/: backend.hpp  canvas.hpp  context.hpp  cpu_backend.hpp  device.hpp  device_visitor.hpp  draw_op_visitor.hpp  draw_pass.hpp  glyph_cache.hpp  image.hpp  ink.hpp  matrix.hpp  paint.hpp  pipeline.hpp  pixel_data.hpp  pixmap.hpp  raster_device.hpp  recording.hpp  renderer.hpp  surface.hpp  types.hpp  version.hpp
include/ink/gpu/: gl_backend.hpp  gpu_context.hpp
include/ink/gpu/gl/: gl_backend.hpp  gl_context.hpp
include/ink/gpu/metal/: metal_context.hpp
include/ink/gpu/vk/: vk_context.hpp
scripts/: bump-version.sh  release-preflight.sh
src/: canvas.cpp  cpu_backend.cpp  cpu_backend.hpp  cpu_renderer.hpp  device.cpp  device_visitor.cpp  draw_pass.cpp  glyph_cache.cpp  gpu_device.cpp  gpu_impl.hpp  image.cpp  pixmap.cpp  raster_device.cpp  recording.cpp  surface.cpp  surface_raster.cpp  surface_recording.cpp
src/gpu/: gpu_context.cpp  gpu_impl.hpp
src/gpu/gl/: gl_backend.cpp  gl_backend.hpp  gl_context.cpp  gl_gpu_impl.cpp  gl_gpu_impl.hpp  gl_resources.hpp  gpu_context.cpp
src/gpu/metal/: metal_context.mm  metal_resources.hpp
src/gpu/vk/: vk_context.cpp
tests/: test_blend.cpp  test_canvas.cpp  test_composite.cpp  test_cpu_backend.cpp  test_draw_pass.cpp  test_image.cpp  test_matrix.cpp  test_paint.cpp  test_pixmap.cpp  test_recording.cpp  test_shapes.cpp  test_surface.cpp  test_transform.cpp  test_types.cpp
